--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://sickdyd.github.io/booking-manager-frontend/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.4",
     "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -21,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
